--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1 class="main">Witaj na stronie!</h1>
+    <img src="Files/Logo.png" alt="Logo" class="logo">
 </body>
 </html>
