--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon"href="Files/favicon.ico">
+    <title>Odnawianiecom.pl</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+
 </head>
 <body>
-    <h1 class="main">Witaj na stronie!</h1>
-    <img src="Files/Logo.png" alt="Logo" class="logo">
+<div style="width: 100%;background-color: #0A3727;">
+<div class="top-container">
+<div class="about">O nas</div>
+<div class="home" style="color: #3CA288;">Strona główna</div>
+<div class="oferta">Oferta</div>
+</div>
+</div>
+
+<div class="bottom-helper">
+<div class="bottom-container">
+<div class="links"><a href="#">Linki</a></div>
+<div class="informations"><a href="#">Informacje</a></div>
+<div class="contact"><a href="#">Kontakt</a> </div>
+<div class="facebook"><a href="#">Facebook</a> </div>
+<div class="Linkedin"><a href="#">Linkedin</a> </div>
+</div>
+</div>
+
+    
 </body>
 </html>
