--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
 <div style="width: 100%;background-color: #0A3727;">
 <div class="top-container">
+    <div class="home" style="color: #3CA288;">Strona główna</div>
 <div class="about">O nas</div>
-<div class="home" style="color: #3CA288;">Strona główna</div>
 <div class="oferta">Oferta</div>
+<div class="contact">Kontakt</div>
 </div>
 </div>
 
 <div class="bottom-helper">
 <div class="bottom-container">
-<div class="links"><a href="#">Linki</a></div>
-<div class="informations"><a href="#">Informacje</a></div>
-<div class="contact"><a href="#">Kontakt</a> </div>
-<div class="facebook"><a href="#">Facebook</a> </div>
-<div class="Linkedin"><a href="#">Linkedin</a> </div>
+<div class="links"><a href="Pages/links.html" class="footer">Linki</a></div>
+<div class="informations"><a href="Pages/informations.html" class="footer">Informacje</a></div>
+<div class="facebook"><a href="#" class="footer">Facebook</a> </div>
+<div class="Linkedin"><a href="#" class="footer">Linkedin</a> </div>
 </div>
 </div>
 
