Dodanie informacji dotyczących spółki

--- a/Pages/informations.html
+++ b/Pages/informations.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linki</title>
+    <title>Informacje</title>
     <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
 
-<div class="informations_header">
-<div class="informations_arow"><ion-icon class="arrow" name="return-down-back-outline" onclick= "history.back()"  size="large"></ion-icon>
-</div>
-<h1 class="informations_h">Informacje</h1>
-</div>
+    <div class="informations_header">
+        <div class="informations_arow">
+            <ion-icon class="arrow" name="return-down-back-outline" onclick="history.back()" size="large"></ion-icon>
+        </div>
+        <h1 class="informations_h">Informacje</h1>
+    </div>
+    <div class="info">
+        <p>Odnawialnie.com.pl SP.Z.O.O</p>
+        <span>NIP:</span><span> 7831937492</span><br><br>
+        <span>REGON:</span><span> 54276386000000</span>
+        <p> Poznań Ul. Święty Marcin 29/8 61-806</p>
 
-    
+
+
+    </div>
+
 </body>
+
 </html>
